@@ -1,3 +1,8 @@
+Tue Jul 21 20:41:20 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* lib/tracer.rb: no show lines unkonwn line number. [ruby-core:22096],
+          no trace display  c-call and c-return as default.
+
 Tue Jul 21 16:24:41 2009  Masaki Suketa  <masaki.suketa@nifty.ne.jp>
 
 	* ext/win32ole/win32ole.c (vtdate2rbtime): VT_DATE variant object 
